--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@meforma/vue-toaster": "^1.3.0",
     "@vuelidate/core": "^2.0.0-alpha.41",
     "@vuelidate/validators": "^2.0.0-alpha.29",
+    "argon2": "^0.28.7",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "express": "^4.18.1",
