--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue": "^3.2.13",
     "vue-router": "^4.0.15",
     "vue-sweetalert2": "^5.0.5",
-    "vue-toast-notification": "^3.0.4"
+    "vue-toast-notification": "^3.0.4",
+    "vue3-popper": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
