--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.8.3",
     "express": "^4.18.1",
     "jspdf": "^2.5.1",
+    "mdb-vue-ui-kit": "^2.0.0",
     "serve-static": "^1.15.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.15",
